Fix overflow on display

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
   text-align: right;
   padding: 5px 20px 0;
   color: rgb(100, 87, 87);
-  overflow: scroll;
+  overflow: auto;
 }
 
 .calc__buttons__container {
